2012-08-23  Thomas Gaillard <tgaillard@users.sourceforge.net>

	* src/interpol.c:  Mean and sigma of kernel density function were
	incorrectly calculated.
	Bug #3519563

2012-08-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c: In the code for drawing the key box and key samples,
	replace direct calls to term->move() and term->vector() with calls to
	clip_move() and clip_vector().
	Bug #3560531

	* src/plot2d.c src/plot3d.c:  Downgrade detection of a trailing comma
	in a plot command to a warning rather than an error.  This allows more
	convenient re-ordering of multi-line plot elements when replotting.

2012-08-14  Ethan A Merritt  <merritt@u.washington.edu>

	* lisp/gnuplot.el: elisp is now getting serious about a syntax change
	announced 10+ years ago.   s/(` (/`(/
	While here, clean out some old cruft from the directory.

2012-08-07  Mojca Miklavec <mojca.miklavec.lists@gmail.com>

	* term/aquaterm.trm:  Revised test for transparency support to match
	the implementation in AquaTerm version 1.1.1

2012-08-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c src/datafile.h src/plot2d.c src/tabulate.c:
	Blank lines separating datasets in an input file were stored as an
	UNDEFINED point but not otherwise marked. This patch introduces a
	recognizable (struct coordinate)blank_data_line that is stored when
	a blank line is encounted. This means that when writing the data back
	out via "set table" the separation between data sets can be maintained.
	Bug #3553151

2012-08-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/command.c src/command.h src/eval.c
	src/eval.h src/graphics.c src/mouse.c src/parse.c src/parse.h
	src/plot2d.c src/save.c src/set.c src/show.c src/tables.c src/tables.h
	src/unset.c term/canvas.trm:

	New command and functionality
	   set link [x2|y2] {via <expression1> inverse <expression2>}
	   unset link [x2|y2]
	This ties the range on the secondary axis to that of the primary axis.